# OvrvisionPro

./: .gitignore  .gitmodules  LICENSE  README.md
board/OVRPRO_COVER_v11/: ovrvision_pro_cover_part1_2.stp  ovrvision_pro_cover_part3.stl  ovrvision_pro_cover_part3_htc_cv1.stl  pro_cover_v2.123dx
board/OVRPRO_v11/: FileList.txt  PartsList.xls  PartsList_first.xls  PartsPosition.xls  first_board5.1l  first_board5.2l  first_board5.3l  first_board5.4l  first_board5.brd  first_board5.dca  first_board5.drd  first_board5.dri  first_board5.mkc  first_board5.mks  first_board5.out  first_board5.plc  first_board5.pls  first_board5.sch  first_board5.stc  first_board5.sts
docs/: DocPage.h
docs/html/: _c3_d_cube_model_8h_source.html  _doc_page_8h_source.html  _open_c_l__kernel_8h_source.html  _ovrvision_pro_c_l_8h_source.html  _win32___direct_x_app_util_8h_source.html  _win32___g_l_app_util_8h_source.html  annotated.html  annotated_dup.js  class_c3_d_cube_model-members.html  class_c3_d_cube_model.html  class_c3_d_cube_model.js  class_o_v_r_1_1_ovrvision_a_r-members.html  class_o_v_r_1_1_ovrvision_a_r.html  class_o_v_r_1_1_ovrvision_a_r.js  (+140 more)
firmware/: Ovrvision Pro ファームウェア更新方法_日本語.docx  Ovrvision Pro ファームウェア更新方法_英語.docx  expo_f_setting.xlsx  ovrvision_logo.ai  paramsheet.docx
include/: ovrvision_ar.h  ovrvision_pro.h  ovrvision_tracking.h
samples/: OpenCV-3.0.0.props  OpenCV-3.4.15.props
samples/JetsonNano/: CMakeLists.txt  CUDA.cpp  main.cpp  ovrvision_setting.h  ovrvision_v4l.cpp  ovrvision_v4l.h
samples/OpenGL/: CMakeLists.txt  OpenGL.cpp  Windows.cpp  glut.cpp
(+206 files in other folders)
